# vvvfaee-python-plugin

./: .gitignore  config.toml  pyproject.toml  start.bat  start.sh  stop.sh
src/vvvface_python_plugin/: __init__.py
src/vvvface_python_plugin/routes/: __init__.py  chat_routes.py
src/vvvface_python_plugin/schemas/: chat_schemas.py
src/vvvface_python_plugin/utils/: __init__.py  config.py  logger.py  openai_service.py
src/vvvface_python_plugin_deprecated_ver/: yyzz_cached.py  yyzz_config.py  yyzz_request.py  yyzz_run.py
