[project]
name = "vvvface-python-plugin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jay", email = "jaychenprg@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.1",
    "openai>=2.6.0",
]

[project.scripts]
vvvface-python-plugin = "vvvface_python_plugin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
